# debug-dojo

./: .env.example  .gitignore  CONTRIBUTING.md  Debug_Dojo_SRD.docx  README.md  brainstorm_debugdojo.md  create_issues.sh  debugdojo_prd.md  debugdojo_tickets.md  docker-compose.yml  judge0.conf  package-lock.json  package.json
.github/workflows/: backend.yml  frontend.yml
backend/: README.md  main.py  pyproject.toml
backend/cli/: gen_tests.py
backend/judge0/: __init__.py  client.py  config.py
backend/llm/: gemini.py
backend/prompts/: gen_tests.txt
backend/supabase/: .gitignore  config.toml
backend/supabase/migrations/: 0001_init.sql
backend/supabase/seeds/: 0001_two_sum.sql
backend/tests/: test_gemini.py  test_gen_tests.py  test_judge0_client.py  test_submission_endpoint.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/editor-test/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/practice/: page.tsx
frontend/src/app/problems/: page.tsx
frontend/src/app/problems/[id]/: page.tsx
frontend/src/app/progress/: page.tsx
frontend/src/components/: BrandMark.tsx  Difficulty.tsx  Tag.tsx  TopNav.tsx  Workspace.tsx  code-editor.tsx
frontend/src/components/landing/: AuthAwareButtons.tsx
frontend/src/lib/: practice-problem.ts  supabase.ts  tokens.ts  useUser.ts
