[project]
name = "debug-dojo-backend"
version = "0.1.0"
description = "FastAPI backend for Debug Dojo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0",
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true

[tool.uv]
default-groups = ["dev"]