[project]
name = "debug-dojo-backend"
version = "0.1.0"
description = "FastAPI backend for Debug Dojo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "google-genai>=1.0.0",
  "google-api-core>=2.30.3",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
default-groups = ["dev"]
